<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="mtc.com.coffeetakeaway.activities.LoginActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_logo"
                android:transitionName="profile"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_logo" />

            <mtc.com.coffeetakeaway.utlis.controls.CSTextView
                android:id="@+id/txt_app_name"
                android:transitionName="appname"
                style="@style/CSTextView.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_app_name"
                android:textAllCaps="true"
                android:textSize="15sp" />
        </LinearLayout>

        <mtc.com.coffeetakeaway.utlis.controls.CSTextView
            style="@style/CSTextView.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/title_register"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_sign_up"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/header"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <!--form-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:minWidth="300dp"
            android:orientation="vertical">

            <!--name-->
            <mtc.com.coffeetakeaway.utlis.controls.CSEditText
                style="@style/CSEdiText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_profile"
                android:hint="@string/hint_name"
                android:imeOptions="actionNext"
                android:inputType="text" />

            <!--email-->
            <mtc.com.coffeetakeaway.utlis.controls.CSEditText
                style="@style/CSEdiText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_email"
                android:hint="@string/hint_email"
                android:imeOptions="actionNext"
                android:inputType="textWebEmailAddress" />

            <!--password-->
            <mtc.com.coffeetakeaway.utlis.controls.CSEditText
                style="@style/CSEdiText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_password"
                android:hint="@string/hint_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

            <!--button login-->
            <mtc.com.coffeetakeaway.utlis.controls.CSButton
                style="@style/CSButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/title_button_register" />


            <!--line or-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/colorGray" />

                <mtc.com.coffeetakeaway.utlis.controls.CSTextView
                    style="@style/CSTextView.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/title_text_or" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/colorGray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:src="@drawable/ic_facebook" />

                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_marginLeft="2dp"
                    android:src="@drawable/ic_google_plus" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <mtc.com.coffeetakeaway.utlis.controls.CSTextView
        android:id="@+id/btn_sigin"
        style="@style/CSTextView.Link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:gravity="bottom"
        android:text="@string/title_have_an_account" />
</RelativeLayout>
